[package]
name = "mempoolcp"
authors = ["dev7ba <dev7ba@protonmail.com>"]
version = "0.1.0"
description = "Copy bitcoin transactions from one source node to a target"
edition = "2021"
keywords = ["bitcoin", "mempool"]
categories = ["command-line-utilities","cryptography::cryptocurrencies"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.17.0"

# bitcoincore-rpc = {path="../rust-bitcoincore-rpc/client"}
serde = { version = "1", features = [ "derive" ] }
anyhow = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
confy = "0.5.1"
rpassword = "7.2.0"
rayon = "1.6.1"
indicatif = {version = "0.17.3", features = ["rayon"]}
zmq = "0.10.0"
hex = "0.4.3"
url = { version="2.3.1",features = ["serde"]}

[profile.release]
strip=true # Strip symbols in binary.
opt-level="s" # Optimize for small size.
lto = true # Optimize but more linking time.
codegen-units = 1 # Maximize size reduction operations.
